# crow-base

./: .gitignore  Makefile  README.md  build.sh  environment.yaml  just-compose.yaml  requirements.txt  start.sh  start_404.sh
config/crow_cameras/: camera_transformation_data.yaml  rs_native.yaml
config/crow_detector/: config_affordance.yaml  config_objects.yaml
config/crow_hri/: all_scene_properties.yaml  scene_properties.yaml  stt_snowboy.yaml
config/crow_monitor/: gui.yaml
src/crow_ontology/: package.xml  setup.cfg  setup.py
src/crow_ontology/crow_ontology/: add_to_database.py  crowracle.py  crowracle_client.py  crowracle_server.py
src/crow_ontology/crow_ontology/backends/: alchemy.py  fuseki.py
src/crow_ontology/crow_ontology/examples/: query_bench.py  tester.py  tester2.py  tester3.py  tester4.py  tester5.py
src/crow_ontology/crow_ontology/template_maker/: cosy_rule.py  cosy_template.py  cosypose_minimal.py  load_cosy_object.py  onto_class_templates.py  ycb_data.py
src/crow_ontology/crow_ontology/user_interface/: onto_render.py  onto_terminal.py  onto_vision.py  onto_vision_old.py
src/crow_ontology/crow_ontology/utils/: __init__.py  build_onto_graph.py  query_parser.py
src/crow_ontology/test/: test_fuseki.py  test_interactive.py  test_runtime.py
src/knowl/: pyproject.toml
src/knowl/src/knowl/: database.py  db_config.py
user_scripts/: cameras.sh  cameras_fake.sh  create_package.sh  crow_ontology_server.sh  detector.sh  export_to_share.sh  fuseki_test.py  observation.sh  pycharm.sh  run_tmux_404.yaml  run_tmux_404_nodetector.yaml  tmux_all.py
(+179 files in other folders)
