<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>crow_ontology</name>
  <version>0.1.0</version>
  <description>crow package</description>
  <maintainer email="radoslav.skoviera@cvut.cz">syxtreme</maintainer>
  <license>GPLv3</license>

  <depend>crow_params</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
